objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deep Blue</fullName>
                </value>
                <value>
                    <fullName>Modern Green</fullName>
                </value>
                <value>
                    <fullName>Pearl White</fullName>
                </value>
                <value>
                    <fullName>Pulsar Red</fullName>
                </value>
                <value>
                    <fullName>VIP Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <inlineHelpText>Used to track delivery of a vehicle tied to a custom order</inlineHelpText>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Arrived_at_Dealer</fullName>
                    <label>Arrived at Dealer</label>
                </value>
                <value>
                    <fullName>Picked_Up</fullName>
                    <label>Picked Up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crossover</fullName>
                </value>
                <value>
                    <fullName>Model One</fullName>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <externalId>true</externalId>
        <label>VIN</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VIN__c</columns>
        <columns>Color__c</columns>
        <columns>Model__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vehicle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <recordTypes>
        <fullName>Custom_Order</fullName>
        <active>true</active>
        <description>Used to track fulfillment of custom orders (N/A for vehicles in inventory)</description>
        <label>Custom Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>